add expenses api endpoint
